<resources>
    <string name="app_name">AndroidSpeechTest</string>

    <string name="speechRecognitionStart">Start</string>
    <string name="speechRecognitionStop">Stop</string>
    <string name="speechRecognitionGetCurrentResults">Get current</string>
    <string name="speechRecognitionWaitingForInput">Waiting for speech</string>
    <string name="speechRecognitionPressStartToBegin">Press start to begin speech recognition</string>
    <string name="speechRecognitionClearTextView">Clear</string>
    <string name="speechRecognitionDefault">Default</string>
    <string name="speechRecognitionExternal">Extern</string>
    <string name="speechRecognitionDirect">Direct</string>
    <string name="speechRecognitionPrompt">You may speak now</string>
</resources>