<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/buttonSpeechRecognizerStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:text="@string/speechRecognitionStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDirectSpeechRecognizerOutput" />

    <Button
        android:id="@+id/buttonSpeechRecognizerStop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/speechRecognitionStop"
        app:layout_constraintEnd_toEndOf="@+id/buttonSpeechRecognizerStart"
        app:layout_constraintStart_toStartOf="@+id/buttonSpeechRecognizerStart"
        app:layout_constraintTop_toBottomOf="@+id/buttonSpeechRecognizerStart" />

    <Button
        android:id="@+id/buttonSpeechRecognizerGetCurrentResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/speechRecognitionGetCurrentResults"
        app:layout_constraintEnd_toEndOf="@+id/buttonSpeechRecognizerStop"
        app:layout_constraintStart_toStartOf="@+id/buttonSpeechRecognizerStop"
        app:layout_constraintTop_toBottomOf="@+id/buttonSpeechRecognizerStop" />

    <Button
        android:id="@+id/buttonClearView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/speechRecognitionClearTextView"
        app:layout_constraintEnd_toEndOf="@+id/buttonSpeechRecognizerGetCurrentResult"
        app:layout_constraintStart_toStartOf="@+id/buttonSpeechRecognizerGetCurrentResult"
        app:layout_constraintTop_toBottomOf="@+id/buttonSpeechRecognizerGetCurrentResult" />

    <EditText
        android:id="@+id/editTextDirectSpeechRecognizerOutput"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:clickable="false"
        android:focusable="false"
        android:gravity="start|top"
        android:hint="@string/speechRecognitionWaitingForInput"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>